# hack/python-sdk/swagger.json
@@ -33,7 +33,7 @@
           "format": "int32"
         },
         "nProcPerNode": {
-          "description": "Number of workers per node; supported values: [auto, cpu, gpu, int].",
+          "description": "Number of workers per node; supported values: [auto, cpu, gpu, int]. Deprecated: This API is deprecated in v1.7+ Use .spec.nprocPerNode instead.",
           "type": "integer",
           "format": "int32"
         },
@@ -490,6 +490,10 @@
       "properties": {
         "elasticPolicy": {
           "$ref": "#/definitions/kubeflow.org.v1.ElasticPolicy"
+        },
+        "nprocPerNode": {
+          "description": "Number of workers per node; supported values: [auto, cpu, gpu, int]. For more, https://github.com/pytorch/pytorch/blob/26f7f470df64d90e092081e39507e4ac751f55d6/torch/distributed/run.py#L629-L658. Defaults to auto.",
+          "type": "string"
         },
         "pytorchReplicaSpecs": {
           "description": "A map of PyTorchReplicaType (type) to ReplicaSpec (value). Specifies the PyTorch cluster configuration. For example,\n  {\n    \"Master\": PyTorchReplicaSpec,\n    \"Worker\": PyTorchReplicaSpec,\n  }",
